# attest-ai

./: .gitignore  EVIDENCE_PLAN.md  GOVERNANCE_PLAN.md  IDEAS_SHORTLIST.md  LEARNING.md  OUTREACH_TARGETS.md  PRICING.md  pyproject.toml
attest/: __init__.py  cli.py
attest/classify/: categories.py  engine.py
attest/dashboard/: app.py
attest/dashboard/static/: style.css
attest/dashboard/templates/: base.html  index.html  system_detail.html
attest/docs/: generator.py  oscal.py
attest/docs/templates/: annex_iv.md.j2
attest/monitor/: alerts.py  drift.py
attest/sdk/: registry.py  wrapper.py
attest/store/: db.py
demo/: construction_safety.py  launch_dashboard.py
outreach/: 01-buildots-yakir-sudry.md  02-viact-gary-ng.md  03-nplan-alan-mosca.md  04-deepqual-abdelhakim.md  05-openspace-michael-fleischman.md  _pilot-agreement-template.md  _post-call-templates.md
research/: CURATION.md  results.json  search_arxiv.py
site/: index.html  pricing.html
